# aoc2022

./: LICENSE.md  README.md  pyproject.toml
src/1/: parse.py
